# dmrg

./: README.md  main.py  mat  pyproject.toml  tensor_products.py
dmrg/: einsum_evaluation.py  einsum_optimal_paths.py  hf_integrals.py  initialization.py  plotting.py  utils.py
dmrg/dmrg/: effective_hamiltonian.py  mps.py  sweep.py
dmrg/fermions/: finite_state_machine.py  mpo.py  mps.py  op_construction.py  op_indexing.py  operator_wrangling.py
dmrg/heisenberg_chain/: effective_hamiltonian.py  mpo.py  mps.py  sweep.py
dmrg/spin_systems/: exact.py  mpo.py  mps.py
scripts/: H_chain_fermion_orbitals.py  N2_fermion_orbitals.py  anticommutation.py  einsum_optimization.py  fci_one_electron_energy.py  fermionic_mpo.py  heisenberg_chain.py  molecular_hamiltonian.py  one_body_spin_chain.py  qc_mpo.py  qc_mpo_2.py  reshaping.py  run_dmrg.py  test_reshaping.py  transverse_ising.py
scripts/dep/: H_chain_fermion_orbitals.py  fermionic_mpo.py  heisenberg_chain.py  qc_mpo_2.py
tests/: anticommutation.py  pyscf_integrals.py  tenpy_operator_definitions.py  test_index_generation.py  test_initialization.py  test_mpo.py  tests_sparse.py
