[project]
name = "dmrg"
version = "0.1.0"
description = ""

authors = [
    { name = "Steffen Wedig", email = "snw30@cam.ac.uk" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyscf==2.8.0",
    "opt_einsum==3.4.0",
    "scipy==1.15.2",
    "sparse==0.15.5",
    "matplotlib==3.10.1"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["I", "UP", "F", "E", "W", "C90", "B", "A", "RUF"]
lint.ignore = ["E501", "B008"]
